# Lamarck

./: .gitignore  .woodpecker.yml  DESIGN.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: eval-suite-v1-errata.md  eval-suite-v1-readiness-review.md  eval-suite-v1.md  runpod-workflow.md
scripts/data_collection/: fetch-arxiv-papers.py
scripts/eval/: generate_tier3_holdout.py  run-all.sh  run_tier.py
scripts/runpod/: RUN_LAMARCK.sh  pod-setup.sh  publish-adapter.sh  pull-adapter.sh  serve.sh  train.py
seed-data/: README.md  training-knowledge-from-archives.md
seed-data/arxiv-ml/: README.md
src/lamarck/: __init__.py
src/lamarck/eval/: __init__.py  aggregate_cli.py  tier1_external.py  tier2_engineering.py  tier3_grounded.py
src/lamarck/eval/rubrics/: __init__.py  custom_layer.py  json_mode.py  llm_judge.py  peft_loop.py
src/lamarck/eval/tier2_tasks/curriculum-design/: README.md  cd_001_json_mode.json  cd_002_secure_code.json  cd_003_markdown_format.json  cd_004_multilingual_consistency.json  (+6 more)
src/lamarck/eval/tier3_holdout/: README.md  json_mode_problems.jsonl
tests/: _minimal_valid.py  test_aggregate_cli.py  test_custom_layer_rubric.py  test_eval_suite.py  test_json_mode_scorer.py  test_llm_judge_rubric.py  test_peft_loop_rubric.py  test_run_all_script.py  test_scaffold.py  test_tier1.py  test_tier1_smoke.py  test_tier2.py  test_tier2_curriculum_corpus.py  test_tier2_custom_layer_corpus.py  test_tier2_diagnostics_corpus.py  test_tier2_peft_corpus.py  test_tier2_smoke.py  test_tier3.py  test_tier3_holdout_corpus.py  test_tier3_smoke.py
(+43 files in other folders)
